@@ -21,6 +21,7 @@ def pytest_configure(config):
     settings = QtCore.QSettings()
     settings.setIniCodec("utf-8")
     settings.setValue("check for updates", 0)
+    settings.setValue("advanced/user confirm clear", 0)
     settings.sync()
     # set global temp directory
     tempfile.tempdir = TMPDIR
@@ -30,5 +31,12 @@ def pytest_unconfigure(config):
     """
     called before test process is exited.
     """
+    QtCore.QCoreApplication.setOrganizationName("Zellmechanik-Dresden")
+    QtCore.QCoreApplication.setOrganizationDomain("zellmechanik.com")
+    QtCore.QCoreApplication.setApplicationName("shapeout2")
+    QtCore.QSettings.setDefaultFormat(QtCore.QSettings.IniFormat)
+    settings = QtCore.QSettings()
+    settings.setIniCodec("utf-8")
+    settings.setValue("advanced/user confirm clear", 1)
     # clear global temp directory
     shutil.rmtree(TMPDIR, ignore_errors=True)
