@@ -1,5 +1,7 @@
 2.9.3
  - fix: implement closeEvent in main and ask user before exiting
+ - tests: use hidden settings variable to skip asking the user to
+   clear the session
 2.9.2
  - setup: bump dclab from 0.39.3 to 0.39.5 (fix opening files
    with some online filter settings)
